Attempt to fix windows MSVC based build.

--- a/msvc/libgc.vcxproj
+++ b/msvc/libgc.vcxproj
@@ -28,6 +28,7 @@
     <RootNamespace>libgc</RootNamespace>
     <Keyword>Win32Proj</Keyword>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <MonoDisableHaveConfigH>true</MonoDisableHaveConfigH>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
